gcc/testsuite/rust/rustc/ui/issues/issue-40845.rs
trait T { m!(); } // { dg-error "" "" { target *-*-* } }

struct S;
impl S { m!(); } // { dg-error "" "" { target *-*-* } }

fn main() {}

